--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,24 +1,40 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-md-9">
-            <h1 translate="home.title">Welcome, Java Hipster!</h1>
-            <p class="lead" translate="home.subtitle">This is your homepage</p>
+            <!-- <h1 translate="home.title">Welcome, Java Hipster!</h1>
+            <p class="lead" translate="home.subtitle">This is your homepage</p> -->
 
             <div ng-switch="vm.isAuthenticated()">
                 <div class="alert alert-success" ng-switch-when="true" translate="home.logged.message" translate-values="{username: '{{vm.account.login}}'}">
                     You are logged in as user "{{vm.account.login}}".
                 </div>
 
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated" translate-compile>
+                <!-- <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated" translate-compile>
                     If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
                 </div>
 
                 <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.register" translate-compile>
                     You don't have an account yet? <a class="alert-link" ui-sref="register">Register a new account</a>
+                </div> -->
+                <!-- <div class="table-responsive" ng-repeat="blog in vm.blogs track by blog.id">
+                	<a ui-sref="blog-detail({id:blog.id})">{{blog.id}}</a>
+                </div> -->
+                <div ng-repeat="blog in vm.blogs track by blog.id">
+                <div class="col-md-1">
+                <h3>{{blog.hits}}</h3>
+                <div>views</div>
                 </div>
+                <div class="col-md-11">
+                <h2><a ui-sref="blog-detail({id:blog.id})">{{blog.blogTitle}}</a></h2>
+                <div>By {{blog.created_byLogin}} |  Published Date {{blog.created_date | date:'medium'}}</div>
+                </div></div>
+                <div class="text-center">
+			        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
+			        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
+			    </div>
             </div>
 
-            <p translate="home.question">
+            <!-- <p translate="home.question">
                 If you have any question on JHipster:
             </p>
 
@@ -32,7 +48,7 @@
 
             <p>
              <span translate="home.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="home.github">Github</a>!
-            </p>
+            </p> -->
         </div>
         <div class="col-md-3">
             <span class="hipster img-responsive img-rounded"></span>
