#Blog-Directive-Dashboard

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
+    <link rel="stylesheet" href="content/css/blog.css">
     <!-- endbuild -->
 </head>
 <body ng-app="yoUVcodeApp" ng-strict-di>
@@ -231,6 +232,7 @@
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/account/account.state.js"></script>
+    <script src="app/components/blog/blog-info.directive.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
