--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
     <link rel="stylesheet" href="bower_components/angular-toggle-switch/angular-toggle-switch-bootstrap.css">
     <link rel="stylesheet" href="bower_components/angular-toggle-switch/angular-toggle-switch.css">
+    <link href="//cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet">
     <!-- endinject -->
     <link rel="stylesheet" href="content/css/vendor.css">
     <!-- endbuild -->
@@ -33,10 +34,10 @@
         </div>
 
     <div class="footer" ui-view="footer" ng-cloak></div>
-   
+
     <div class="copyright" ng-cloak>
           Copyright © 2016-2017 yoUVcode.com, all rights reserved.
-         
+
     </div>
     </div>
 
@@ -76,6 +77,7 @@
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
+    <script src="//cdn.quilljs.com/1.0.0/quill.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
