--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,51 +1,61 @@
 <div ng-cloak>
-    <div class="row">
-        <div class="col-md-9">
-            <!-- <h1 translate="home.title">Welcome, Java Hipster!</h1>
-            <p class="lead" translate="home.subtitle">This is your homepage</p> -->
-
-            <div ng-switch="vm.isAuthenticated()">
-                <div class="alert alert-success" ng-switch-when="true" translate="home.logged.message" translate-values="{username: '{{vm.account.login}}'}">
-                    You are logged in as user "{{vm.account.login}}".
-                </div>
-
-                <!-- <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated" translate-compile>
-                    If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
-                </div>
-
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.register" translate-compile>
-                    You don't have an account yet? <a class="alert-link" ui-sref="register">Register a new account</a>
-                </div> -->
-                <!-- <div class="table-responsive" ng-repeat="blog in vm.blogs track by blog.id">
-                	<a ui-sref="blog-detail({id:blog.id})">{{blog.id}}</a>
-                </div> -->
-                <div ng-repeat="blog in vm.blogs track by blog.id">
-               <blog-info blog="blog"></blog-info>
-                
+    <div ng-switch="vm.isAuthenticated()">
+    	<div class="alert alert-success" ng-switch-when="true" translate="home.logged.message" translate-values="{username: '{{vm.account.login}}'}">
+        	You are logged in as user "{{vm.account.login}}".
+        </div>
+   		<div class="row">
+            <div class="col-md-6">
+            	<div class="panel panel-warning">
+            		<div class="panel-heading">
+            			<h4 class="panel-title">Trending</h4>
+            		</div>
+	            	<div class="panel-body scrolly">
+	            		<div>
+				        	<div ng-repeat="blog in vm.blogs track by blog.id">
+				               	<blog-info blog="blog"></blog-info>
+			                </div>
+			            </div>
+					</div>
+				</div>
             </div>
-<div class="text-center">
-			        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
-			        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
-			    </div>
-            <!-- <p translate="home.question">
-                If you have any question on JHipster:
-            </p>
-
-            <ul>
-                <li><a href="http://jhipster.github.io/" target="_blank" translate="home.link.homepage">JHipster homepage</a></li>
-                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" translate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
-                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" translate="home.link.bugtracker">JHipster bug tracker</a></li>
-                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" translate="home.link.chat">JHipster public chat room</a></li>
-                <li><a href="https://twitter.com/java_hipster" target="_blank"  translate="home.link.follow">follow @java_hipster on Twitter</a></li>
-            </ul>
-
-            <p>
-             <span translate="home.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="home.github">Github</a>!
-            </p> -->
-        </div>
-        </div>
-        <div class="col-md-3">
-            <span class="hipster img-responsive img-rounded"></span>
-        </div>
-    </div>
+            <div class="col-md-6">
+            	<div class="panel panel-info">
+            		<div class="panel-heading">
+            			<h4 class="panel-title">Java</h4>
+            		</div>
+	            	<div class="panel-body scrolly">
+			        	<div ng-repeat="blog in vm.blogs track by blog.id">
+			               	<blog-info blog="blog"></blog-info>
+		                </div>
+					</div>
+				</div>
+            </div>
+     	</div>
+     	<div class="row">
+            <div class="col-md-6">
+            	<div class="panel panel-danger">
+            		<div class="panel-heading">
+            			<h4 class="panel-title">AngularJS</h4>
+            		</div>
+	            	<div class="panel-body scrolly">
+			        	<div ng-repeat="blog in vm.blogs track by blog.id">
+			               	<blog-info blog="blog"></blog-info>
+		                </div>
+					</div>
+				</div>
+            </div>
+            <div class="col-md-6">
+            	<div class="panel panel-info">
+            		<div class="panel-heading">
+            			<h4 class="panel-title">Most Viewed</h4>
+            		</div>
+	            	<div class="panel-body scrolly">
+			        	<div ng-repeat="blog in vm.blogs track by blog.id">
+			               	<blog-info blog="blog"></blog-info>
+		                </div>
+					</div>
+				</div>
+            </div>
+     	</div>
+	</div>
 </div>
