--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
     <link rel="stylesheet" href="bower_components/angular-toggle-switch/angular-toggle-switch-bootstrap.css">
     <link rel="stylesheet" href="bower_components/angular-toggle-switch/angular-toggle-switch.css">
+    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link href="//cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet">
     <!-- endinject -->
     <link rel="stylesheet" href="content/css/vendor.css">
@@ -34,10 +35,10 @@
         </div>
 
     <div class="footer" ui-view="footer" ng-cloak></div>
-
+   
     <div class="copyright" ng-cloak>
           Copyright © 2016-2017 yoUVcode.com, all rights reserved.
-
+         
     </div>
     </div>
 
@@ -161,6 +162,9 @@
     <script src="app/components/util/base64.service.js"></script>
     <script src="app/components/login/login.service.js"></script>
     <script src="app/components/login/login.controller.js"></script>
+    <script src="app/components/login/login.state.js"></script>
+    <script src="app/components/login/register.state.js"></script>
+    <script src="app/components/login/register.controller.js"></script>
     <script src="app/components/language/language.service.js"></script>
     <script src="app/components/language/language.filter.js"></script>
     <script src="app/components/language/language.controller.js"></script>
